--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,8 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+#使用androidx
+android.useAndroidX=true
+#将第三方库迁移到androidx
+android.enableJetifier=true
