添加网络接收器

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
           package="com.lins.baseframework">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <application
             android:name=".base.MyApp"
             android:allowBackup="true"
@@ -13,13 +16,13 @@
             android:theme="@style/AppTheme">
         <activity android:name=".ui.MainActivity">
             <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".ui.TempActivity">
-        </activity>
+        <activity android:name=".ui.TempActivity"/>
 
 
 
@@ -32,6 +35,8 @@
                     android:name="android.support.FILE_PROVIDER_PATHS"
                     android:resource="@xml/file_paths" />
         </provider>
+
+        <receiver android:name=".utils.receiver.NetWorkChangReceiver" />
     </application>
 
 </manifest>
